--- a/index.html
+++ b/index.html
@@ -76,7 +76,27 @@
         </main>
       </div>
     </div>
-    <!-- Displays each tasks details when the task is clicked (Modal)-->
-    
+    <!-- Modal for tasks when task cards clicked-->
+     <dialog id="task-modal">
+        <form id="form-modal">
+          <div id="modal-header">
+            <h3>Task</h3>
+            <button id="close-btn">&times;</button>
+          </div>
+
+          <label for="task-title">Title</label>
+          <input type="text" id="task-title" required/>
+
+          <label for="task-descrip">Description</label>
+          <textarea id="task-descrip" row="4"></textarea>
+
+          <label for="task-status">Satus</label>
+          <select id="task-status" required>
+            <option value="todo">todo</option>
+            <option value="doing">doing</option>
+            <option value="done">done</option>
+          </select>
+        </form>
+     </dialog>
   </body>
 </html>
