Rename card-container and cards in HTML

--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
               <p class="todo-title">Todo (4)</p>
             </div>
             <!-- Tasks container for TODO -->
-            <div class="card-container">
-              <div class="card">Launch Epic Career 🚀</div>
-              <div class="card">Conquer React ⚛️</div>
-              <div class="card">Understanding Databases ⚙️</div>
-              <div class="card">Crush Frameworks 🖼️</div>
+            <div class="task-container">
+              <div class="task">Launch Epic Career 🚀</div>
+              <div class="task">Conquer React ⚛️</div>
+              <div class="task">Understanding Databases ⚙️</div>
+              <div class="task">Crush Frameworks 🖼️</div>
             </div>
           </div>
           <!-- DOING Column -->
@@ -56,9 +56,9 @@
               <p class="doing-title">Doing (2)</p>
             </div>
             <!-- Tasks container for DOING -->
-            <div class="card-container">
-              <div class="card">Master JavaScript 💛</div>
-              <div class="card">Never Give Up 🏆</div>
+            <div class="task-container">
+              <div class="task">Master JavaScript 💛</div>
+              <div class="task">Never Give Up 🏆</div>
             </div>
           </div>
           <!-- DONE Column -->
@@ -68,9 +68,9 @@
               <p class="done-title">Done (2)</p>
             </div>
             <!-- Tasks container for DONE -->
-            <div class="card-container">
-              <div class="card">Explore ES6 Features 🚀</div>
-              <div class="card">Have fun 🥳</div>
+            <div class="task-container">
+              <div class="task">Explore ES6 Features 🚀</div>
+              <div class="task">Have fun 🥳</div>
             </div>
           </div>
         </main>
