Add initialize taskboard function

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </div>
     <!-- Modal for tasks when task cards clicked-->
      <dialog id="task-modal">
-        <form id="form-modal">
+        <form method="dialog" id="task-form">
           <div id="modal-header">
             <h3>Task</h3>
             <button id="close-btn">&times;</button>
