Update modal styles with comments

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <input type="text" id="task-title" name="title" required/>
           <label for="task-descrip">Description</label>
           <textarea id="task-descrip" row="4" name="sescription"></textarea>
-          <label for="task-status">Satus</label>
+          <label for="task-status">Status</label>
           <select id="task-status" name="status" required>
             <option value="todo">todo</option>
             <option value="doing">doing</option>
